# xmrig-nvidia

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: CUDA.cmake  FindNVML.cmake  asm.cmake  cn-gpu.cmake  flags.cmake
res/: app.rc
src/: App.cpp  App.h  App_unix.cpp  Cpu.h  Cpu_stub.cpp  Mem.h  Mem_unix.cpp  Mem_win.cpp  Options.cpp  Options.h  Platform.h  Platform_mac.cpp  Platform_unix.cpp  Platform_win.cpp  Summary.cpp  Summary.h  config.json  defaults.h  version.h  xmrig.h
src/api/: Api.cpp  Api.h  ApiRouter.cpp  ApiRouter.h  ApiState.cpp  ApiState.h  Httpd.cpp
src/base/net/: Pool.cpp  Pools.cpp
src/base/tools/: Arguments.cpp
src/common/: xmrig.h
src/common/config/: CommonConfig.cpp
src/common/crypto/: Algorithm.cpp
src/common/interfaces/: IConfig.h
src/common/log/: BasicLog.cpp  BasicLog.h  ConsoleLog.cpp  ConsoleLog.h  FileLog.cpp  FileLog.h  Log.cpp  Log.h  SysLog.cpp  SysLog.h
src/common/net/: Client.cpp  Client.h  Job.cpp  Job.h
src/common/utils/: timestamp.h
src/core/: Config.cpp  Config.h  ConfigLoader_default.h  ConfigLoader_platform.h  Controller.cpp  Controller.h  usage.h
src/crypto/: CryptoNight.cpp  CryptoNight.h  CryptoNight_constants.h  CryptoNight_p.h  CryptoNight_test.h  CryptoNight_x86.h
src/crypto/randomx/: randomx.cpp  virtual_memory.cpp
src/log/: ConsoleLog.cpp
src/net/: Client.cpp  Job.cpp  Job.h  JobResult.h  Network.cpp  Network_win.cpp  Url.cpp
src/net/strategies/: DonateStrategy.cpp  DonateStrategy.h
src/nvidia/: CryptonightR.cu  CudaCLI.cpp  CudaCLI.h  CudaCryptonightR_gen.cpp  CudaCryptonightR_gen.h  Health.h  NvmlApi.cpp  NvmlApi.h  NvmlApi_stub.cpp  cryptonight.h  cuda_core.cu  cuda_cryptonight_gpu.hpp  cuda_device.hpp  cuda_extra.cu  cuda_extra.h  cuda_fast_div_heavy.hpp  cuda_keccak.hpp
src/nvidia/RandomWOW/: aes_cuda.hpp  random_wow.cu  randomx_cuda.hpp
src/nvidia/RandomX/: aes_cuda.hpp  common.hpp  hash.hpp  randomx.cu  randomx_cuda.hpp
src/nvidia/RandomX_Loki/: randomx_loki.cu
src/nvidia/RandomX_Monero/: randomx_monero.cu
src/nvidia/RandomX_Wownero/: randomx_wownero.cu
src/workers/: CudaThread.cpp  CudaThread.h  CudaWorker.cpp  CudaWorker.h  GpuThread.cpp  GpuThread.h  Handle.cpp  Handle.h  Hashrate.cpp  Hashrate.h  Workers.cpp  Workers.h
